--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,14 +6,14 @@ authors = [
     { name = "Diego Heer", email = "diegojonathanheer@gmail.com" }
 ]
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.11"
 dependencies = [
-    "ansible (>=11.1.0,<12.0.0)"
+    "ansible (>=11.1.0,<12.0.0)",
 
 ]
 
 [tool.poetry.group.dev.dependencies]
-ansible-lint = "^25.1.0"
+ansible-lint = "^25.1.1"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
