--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "ansible (>=11.1.0,<12.0.0)",
+    "passlib (>=1.7.4,<2.0.0)",
 
 ]
 
