--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,7 @@
 [defaults]
 inventory = ./inventory/hosts.yml
+roles_path = ./roles
+host_key_checking = false
 
 [ssh_connections]
 pipelining = true
