--- a/roles/system/tasks/user.yml
+++ b/roles/system/tasks/user.yml
@@ -3,27 +3,22 @@
     name: "{{ item }}"
   loop:
     - docker
-    - "{{ username }}"
-
+    - "{{ system_username }}"
 
 - name: Ensure the non-root user is created
   ansible.builtin.user:
-    name: "{{ username }}"
-    password: "{{ password | password_hash('sha512') }}"
+    name: "{{ system_username }}"
+    password: "{{ system_password | password_hash('sha512') }}"
     groups:
       - sudo
       - docker
       - users
     append: true
-    shell: "{{ shell }}"
+    shell: "{{ system_shell }}"
     update_password: on_create
 
-- name: Suppress login message (hushlogin)
-  ansible.builtin.file:
-    path: "/home/{{ ansible }}/.hushlogin"
-    mode: "0644"
-    owner: "{{ username }}"
-    group: "{{ username }}"
-    modification_time: preserve
-    access_time: preserve
-    state: touch
+- name: Copy SSH public key for new user
+  ansible.builtin.authorized_key:
+    user: "{{ system_username }}"
+    state: present
+    key: "{{ lookup('file', lookup('env','HOME') + '/.ssh/id_ed25519.pub') }}"
