Vars|Refactor: reuse vars across multiple custom roles

--- a/roles/system/handlers/main.yml
+++ b/roles/system/handlers/main.yml
@@ -1,4 +1,4 @@
 - name: Apply updated PATH
   ansible.builtin.shell: "source ~/.bashrc"
   args:
-    executable: "{{ system_shell }}"
+    executable: "{{ shell }}"
