Loops|Fix: avoid conflicts due to naming of loop variables

--- a/roles/gui/tasks/main.yml
+++ b/roles/gui/tasks/main.yml
@@ -1,4 +1,6 @@
 - name: General tasks for GUI usage
-  ansible.builtin.include_tasks: "{{ item }}"
+  ansible.builtin.include_tasks: "{{ task }}"
   loop:
     - packages.yml
+  loop_control:
+    loop_var: task
