--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,6 +2,7 @@
 inventory = ./inventory/hosts.yml
 roles_path = ./roles
 host_key_checking = false
+allow_world_readable_tmpfiles = true
 
 [ssh_connections]
 pipelining = true
