--- a/roles/system/tasks/user.yml
+++ b/roles/system/tasks/user.yml
@@ -8,7 +8,7 @@
 - name: Ensure the non-root user is created
   ansible.builtin.user:
     name: "{{ username }}"
-    password: "{{ system_password | password_hash('sha512') }}"
+    password: "{{ vault_password | password_hash('sha512') }}"
     groups:
       - sudo
       - docker
