--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-inventory = ./inventory/hosts.yml
+inventory = ./inventory.yml
 roles_path = ./roles
 host_key_checking = false
 allow_world_readable_tmpfiles = true
