Ansible/Local|Add: added option to run ansible playbooks locally using the github repo together with the ansible-pull command

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,6 @@
     "files.associations": {
       "*.yml": "ansible",
     },
-    "ansible.python.interpreterPath": "${workspaceFolder}/.venv/bin/python"
+    "ansible.python.interpreterPath": "${workspaceFolder}/.venv/bin/python",
+    "ansible.validation.lint.enabled": false
 }
