--- a/roles/system/tasks/user.yml
+++ b/roles/system/tasks/user.yml
@@ -22,3 +22,5 @@
     user: "{{ username }}"
     state: present
     key: "{{ lookup('file', lookup('env','HOME') + '/.ssh/id_ed25519.pub') }}"
+  ignore_errors: true
+  when: ansible_hostname != "localhost"
