--- a/local.yml
+++ b/local.yml
@@ -7,6 +7,10 @@
     username: diego
     shell: /bin/bash
 
+  pre_tasks:
+    - name: Install Ansible Galaxy packages
+      ansible.builtin.command: ansible-galaxy install -r requirements.yml
+
   roles:
     - role: system
     - role: development
