Roles/Projects|Add: created custom role to git clone project repo's with ansible

--- a/run.yml
+++ b/run.yml
@@ -10,5 +10,5 @@
   roles:
     - role: system
     - role: development
+    - role: projects
     # TODO: add services role
-    # TODO: add projects role
