--- a/roles/system/tasks/user.yml
+++ b/roles/system/tasks/user.yml
@@ -23,4 +23,4 @@
     state: present
     key: "{{ lookup('file', lookup('env','HOME') + '/.ssh/id_ed25519.pub') }}"
   ignore_errors: true
-  when: ansible_hostname != "localhost"
+  when: inventory_hostname != "localhost"
