--- a/tests/test_services.yml
+++ b/tests/test_services.yml
@@ -1,5 +1,5 @@
-- name: Play for configuring home server
-  hosts: home_server
+- name: Test Services role
+  hosts: test
   become: true
 
   vars:
@@ -8,6 +8,4 @@
 
   roles:
     - role: system
-    - role: development
-    - role: projects
     - role: services
