--- a/inventory.yml
+++ b/inventory.yml
@@ -8,3 +8,9 @@ home_lab:
       ansible_user: diego
       ansible_connection: ssh
       ansible_ssh_private_key_file: /home/diego/.ssh/id_ed25519
+
+    laptop:
+      ansible_host: # TODO: add missing host ip address
+      ansible_user: diego
+      ansible_connection: ssh
+      ansible_ssh_private_key_file: /home/diego/.ssh/id_ed25519
