--- a/roles/system/tasks/packages.yml
+++ b/roles/system/tasks/packages.yml
@@ -6,5 +6,14 @@
 
 - name: Install apt packages
   ansible.builtin.package:
-    name: "{{ system_packages }}"
+    name:
+      - net-tools
+      - speedtest-cli
+      - software-properties-common
+      - glances
+      - tmux
+      - zip
+      - unzip
+      - curl
+      - flatpak
     state: present
