System/tmux|Add: added installation and configuration for tmux

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@ andrewrothstein.terraform
 andrewrothstein.hashi
 andrewrothstein.unarchivedeps
 geerlingguy.pip
+nephelaiio.git
+nephelaiio.tmux
+nephelaiio.xclip
