Services/Ansible/Checks|Feature: check if folder structure is present for services deployment with docker

--- a/roles/services/tasks/main.yml
+++ b/roles/services/tasks/main.yml
@@ -1,6 +1,8 @@
+---
 - name: Home Server docker services setup
   ansible.builtin.include_tasks: "{{ task }}"
   loop:
-    - settings.yml
+    - packages.yml
+    - checks.yml
   loop_control:
     loop_var: task
