Vars|Refactor: removed unnecessary shell variable

--- a/roles/development/handlers/main.yml
+++ b/roles/development/handlers/main.yml
@@ -2,7 +2,7 @@
 - name: Apply updated PATH
   ansible.builtin.shell:
     cmd: "source ~/.bashrc"
-    executable: "{{ shell }}"
+    executable: /bin/bash
   become: true
   become_user: "{{ username }}"
   changed_when: false
