--- a/roles/system/tasks/tmux.yml
+++ b/roles/system/tasks/tmux.yml
@@ -1,3 +1,8 @@
+- name: Check if tmux is available in system
+  ansible.builtin.stat:
+    path: /usr/bin/tmux
+  register: tmux_check
+
 - name: Install and configure tmux
   ansible.builtin.include_role:
     name: nephelaiio.tmux
@@ -11,6 +16,7 @@
       set -g @plugin 'tmux-plugins/tmux-sensible'
       set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
       run '/home/{{ username }}/.tmux/plugins/tpm/tpm'
+  when: not tmux_check.stat.exists
 
 - name: Change ownership of tmux config folder # Required for manual installation of plugins
   ansible.builtin.file:
@@ -20,3 +26,4 @@
     group: "{{ username }}"
     mode: "0700"
     recurse: true
+  when: not tmux_check.stat.exists
