Ansible/Config|Feature: defined location of vault password file inside the Ansible configuration, removing the need of using flags to refer to it everytime

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ terraform.tfstate.backup
 .terraform.tfstate.lock.info
 
 tests/inventory.yml
-vault_key
+.vault_key
 
 # Ansible packages
 haxorof.docker_ce
