--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,6 +3,7 @@ inventory = ./inventory.yml
 roles_path = ./roles
 host_key_checking = false
 allow_world_readable_tmpfiles = true
+vault_password_file = ./.vault_key
 
 [ssh_connections]
 pipelining = true
