Ansible/Config|Feature: define multiple places to get Ansible roles from, avoiding the polution of the local roles folder

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,7 +1,8 @@
 [defaults]
 inventory = ./inventory.yml
-roles_path = ./roles
+roles_path = $PWD/.venv/.ansible/roles:$PWD/roles
 host_key_checking = false
+retry_files_enabled = false
 allow_world_readable_tmpfiles = true
 vault_password_file = ./.vault_key
 
