--- a/roles/development/tasks/main.yml
+++ b/roles/development/tasks/main.yml
@@ -1,4 +1,8 @@
 ---
+- name: Run System role
+  ansible.builtin.include_role:
+    name: system
+
 - name: General tasks for development environment setup
   ansible.builtin.include_tasks: "{{ task }}"
   loop:
