--- a/roles/gui/tasks/main.yml
+++ b/roles/gui/tasks/main.yml
@@ -1,3 +1,8 @@
+---
+- name: Run System role
+  ansible.builtin.include_role:
+    name: system
+
 - name: General tasks for GUI usage
   ansible.builtin.include_tasks: "{{ task }}"
   loop:
