--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -13,15 +13,29 @@ networks:
     driver: bridge
 
 services:
+  tailscale:
+    image: tailscale/tailscale:v1.80.0
+    container_name: tailscale
+    restart: unless-stopped
+    hostname: home_server
+    environment:
+      - TS_AUTHKEY=tskey-auth-kLYiuNzVZw11CNTRL-mCMiusCkHBFSxeNbYdbXBFsWi49LtPG6
+      - TS_ACCEPT_DNS=true
+      - TS_STATE_DIR=/var/lib/tailscale
+      - TS_USERSPACE=false
+    volumes:
+      - /home/diego/services_data/tailscale/state:/var/lib/tailscale
+    devices:
+      - /dev/net/tun:/dev/net/tun
+    cap_add:
+      - net_admin
+
   # Reference: https://www.youtube.com/watch?v=qlcVx-k-02E
   nginx-proxy-manager:
     image: "jc21/nginx-proxy-manager:2.12.3"
     container_name: nginx-proxy-manager
     restart: unless-stopped
-    ports:
-      - 80:80
-      - 81:81
-      - 443:443
+    network_mode: service:tailscale
     environment:
       - PUID=1000
       - PGID=1000
@@ -29,6 +43,8 @@ services:
       - /home/diego/services_data/nginx-proxy-manager/data:/data
       - /home/diego/services_data/nginx-proxy-manager/letsencrypt:/etc/letsencrypt
       - /home/diego/services_data/nginx-proxy-manager/logrotate.custom:/etc/logrotate.d/nginx-proxy-manager
+    depends_on:
+      - tailscale
 
   homarr:
     container_name: homarr
@@ -41,7 +57,6 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
       - SECRET_ENCRYPTION_KEY=ff0ba58c92e92d17d00df517aafa3cff9362a170b1076820528ddbd347a91fce
-
 
   filebrowser:
     container_name: filebrowser
@@ -60,7 +75,6 @@ services:
       - PGID=1000
     entrypoint:
       - /filebrowser
-    network_mode: bridge
     logging:
       driver: json-file
       options: {}
