--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
 
 [tool.poetry.group.dev.dependencies]
 ansible-lint = "^25.1.1"
+yamllint = "^1.35.1"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
