--- a/roles/projects/tasks/gitlab.yml
+++ b/roles/projects/tasks/gitlab.yml
@@ -25,10 +25,11 @@
   become_user: "{{ username }}"
   ansible.builtin.git:
     repo: git@gitlab.com:Dynatron/{{ repo }}.git
-    clone: true
-    accept_newhostkey: true
     dest: "/home/{{ username }}/projects/{{ repo }}"
     key_file: "{{ ssh_key.filename }}"
+    accept_newhostkey: true
+    clone: true
+    version: main
   loop: "{{ projects_gitlab_repos }}"
   loop_control:
     loop_var: repo
