--- a/roles/services/tasks/compose.yml
+++ b/roles/services/tasks/compose.yml
@@ -7,3 +7,10 @@
   community.docker.docker_compose_v2:
     project_src: "{{ services_docker_src }}"
     state: present
+  environment:
+    NGINX_TAILSCALE_AUTHKEY: "{{ services_nginx_tailscale_authkey }}"
+    HOMARR_SECRET_ENCRYPTION_KEY: "{{ services_homarr_secret_encryption_key }}"
+    MONGODB_TAILSCALE_AUTHKEY: "{{ services_mongodb_tailscale_authkey }}"
+    TRANSMISSION_OPENVPN_USERNAME: "{{ services_transmission_openvpn_username }}"
+    TRANSMISSION_OPENVPN_PASSWORD: "{{ services_transmission_openvpn_password }}"
+    TRANSMISSION_LOCAL_NETWORK: "{{ services_transmission_local_network }}"
