--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
     // Ansible
     "files.associations": {
       "*.yml": "ansible",
+      "**/molecule/**/*.yml": "ansible",
       "**/services/*.yml": "yaml",
     },
     "ansible.python.interpreterPath": "${workspaceFolder}/.venv/bin/python",
